# project-memory-template

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
docs/: graduating-tiers.md  regression-testing-standard.md
hooks/check-in-hygiene/: README.md  check_in_hygiene.py
tiers/full/: CLAUDE.md  PLAN.md
tiers/full/.claude/memory/: MEMORY.md
tiers/full/docs/adr/: 0000-adr-template.md
tiers/minimal/: .gitignore  CLAUDE.md  PLAN.md
tiers/standard/: CLAUDE.md  CONTEXT.md  PLAN.md
tiers/standard/.claude/memory/: MEMORY.md
