[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-memory-template-hooks"
version = "0.1.0"
description = "Packaging shim so pre-commit's language: python can install this repo as a hook source. No runtime dependencies -- check_in_hygiene.py is pure stdlib."
requires-python = ">=3.8"

[tool.setuptools]
py-modules = []
